@@ -1,3 +1,6 @@
+4 May 2010: Wouter
+	- Fix dnssec-missing detection that was turned off by server selection.
+
 29 April 2010: Wouter
 	- Fix for dnssec lameness detection to use the key cache.
 	- infra cache entries that are expired are wiped clean.  Previously
